# cuda-poc

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakeLists_original.txt  Dockerfile  README.md  performance_notes.md  requirements.txt
.claude/: settings.local.json
.devcontainer/: Dockerfile-node-torch  devcontainer-env.sh  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci-docker.yml  ci.yml  gpu-tests.yml  python-tests.yml  release.yml
Refrence_Imp/: CLAUDE.md  CMakeLists.txt  create_diff_tensor.cu  create_diff_tensor.h  create_diff_tensor_test.cpp  create_diff_tensor_wrapper.cpp  test_main.cpp
examples/: simple_test.cpp
host/: gaussian_threshold_launcher.cu  gaussian_threshold_launcher.h  launchers.cu  launchers.h
image_processing/: image_filter.py  image_filter_opencv.py
kernels/: filters.cu  fused_ops.cu  gaussian_threshold_kernel.cu  morphology.cu
tests/: test_common.cpp  test_common.h  test_filters.cpp  test_fused_ops.cpp  test_gaussian_threshold.cpp  test_morphology.cpp
